# nrf_Connect_SDK_try

./: .gitignore  README.md  nrf_Connect_SDK_try.code-workspace
09-spi_flash-v1.0/src/: main.c
301df_central/: 301df_central.code-workspace  CMakeLists.txt  prj.conf
301df_central/src/: main.c
301df_peripheral/: CMakeLists.txt
301ini/: .gitignore  CMakeLists.txt  FLASH_IMPROVEMENTS.md  README.md  parse_reports.py  parse_reports.v2.py  prj.conf
301ini/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
301ini/src/: cs_de_data_parse.c  cs_de_data_parse.h  main.c  step_data_parse.c  step_data_parse.h
301ini_Dip/: CMakeLists.txt  FLASH_WRITE_MODES.md  README.md  ini 代码修改需求.md  prj.conf  初版修改方案.md  工作计划.md
301ini_Dip/doc/: DIP_binary_pc_parser.md  DIP_binary_protocol.md  dip_parse_uart.py
301ini_Dip/src/: main.c
301ini_Dip/src/interface/: button_led.c
301ref/: 301ref.code-workspace  CMakeLists.txt  prj.conf
301ref/src/: main.c
321df_central/: CMakeLists.txt  prj.conf
321df_central/boards/: nrf5340dk_nrf5340_cpuapp.overlay
321df_central/docs/: uart_cmd_module_refactor.md  uart_command_format.md  uart_command_workflow.md
321df_central/src/: main.c  uart_cmd.c  uart_cmd.h
321df_peripheral/: 321df_peripheral.code-workspace  CMakeLists.txt  prj.conf
cs_ini1/: CMakeLists.txt
cs_ini1_fast_try/: CMakeLists.txt  prj.conf
cs_ref1/: CMakeLists.txt
cs_test_ini/: CMakeLists.txt
cs_test_ref/: CMakeLists.txt
flash-test/: .gitignore  README.md  app.overlay  prj.conf
ncs301_cs_ini/: CMakeLists.txt  prj.conf
sensing_save_flash/: CMakeLists.txt
(+14 files in other folders)
